--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 crossorigin="anonymous">
   </head>
-  <body id="root">
+  <body>
     <noscript>You need to enable JavaScript to run this app</noscript>
+    <div id="app"></div>
   </body>
 </html>
